# SinOS

./: Cargo.toml  README.md
job/: create_word_list.js
src/: action_code.rs  config.rs  constant.rs  main.rs  service.rs  util.rs
src/action_code/: game_room.rs  player.rs
src/config/: error.rs  secret.rs
src/constant/: error.rs  secret.rs
src/service/: action_code.rs  admin.rs
src/util/: error.rs
