[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }

tokio = { version = "1", features = ["full"] }
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

redis = "0.21"
