[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  { version = "0.5", features = ["headers", "ws"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nanoid = "0.4"

tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
headers = "0.3"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
parking_lot = "0.12"

mongodb = "2.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
